fix: kubernetes job
- adding release workflow
- ability to deploy using k8s job

--- a/config/oauth/kustomization.yaml
+++ b/config/oauth/kustomization.yaml
@@ -1,2 +1,8 @@
 resources:
-  - "oauth-app-job.yaml"
+  - "workshop-setup-job.yaml"
+generatorOptions:
+  disableNameSuffixHash: true
+configMapGenerator:
+    - files:
+        - "workshop.yaml"
+      name: workshop-config
