--- a/.ko.yaml
+++ b/.ko.yaml
@@ -1,7 +1,7 @@
 builds:
-- id: oauth-app
-  dir: cmd
-  main: oauth-app
+- id: drone-tutorial-gitea-helper
+  dir: cmd/drone-tutorial-gitea-helper
+  main: main.go
   env:
     - CGO_ENABLED=0
   ldflags:
