--- a/manifests/install.yaml
+++ b/manifests/install.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    app.kubernetes.io/version: "0.1.0-alpha"
+    app.kubernetes.io/version: "0.1.0"
   name: drone
 spec: {}
 ---
@@ -10,7 +10,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app.kubernetes.io/version: "0.1.0-alpha"
+    app.kubernetes.io/version: "0.1.0"
   name: gitea-configurer
   namespace: drone
 ---
@@ -18,7 +18,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   labels:
-    app.kubernetes.io/version: "0.1.0-alpha"
+    app.kubernetes.io/version: "0.1.0"
   name: gitea-configurer
   namespace: drone
 rules:
@@ -33,7 +33,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    app.kubernetes.io/version: "0.1.0-alpha"
+    app.kubernetes.io/version: "0.1.0"
   name: gitea-configurer
   namespace: drone
 roleRef:
@@ -48,11 +48,11 @@ subjects:
 ---
 apiVersion: v1
 data:
-  workshop.yaml: "# The Gitea Configuration\ngiteaAdminUserName: demo\ngiteaAdminUserPassword: demo@123\ngiteaURL: http://gitea-http.default:3000/\nusers:\n  # the lower bound of user e.g. user-01\n  from: 1\n  # the upper bound of user e.g. user-10\n  to: 3\n  # create Gitea oAuth app for user\n  oAuthAppName: demo-oauth\n  # oAuth redirect URL\n  oAuthRedirectURI: https://drone-127.0.0.1.sslip.io:30980\n  # add oAuth App ClientID and ClientSecret to Kubernetes Secret\n  addKubernetesSecret: true\n  # The Namespace where to create the secret, the secret will \n  # use the format demo-oauth-<username>-secret\n  secretNamespace: drone\n  repos:\n    - https://github.com/kameshsampath/jar-stack\n"
+  workshop.yaml: "# The Gitea Configuration\ngiteaAdminUserName: demo\ngiteaAdminUserPassword: demo@123\ngiteaURL: http://gitea-http.default:3000/\nusers:\n  # the lower bound of user e.g. user-01\n  from: 1\n  # the upper bound of user e.g. user-10\n  to: 3\n  # create Gitea oAuth app for user\n  oAuthAppName: demo-oauth\n  # oAuth redirect URL\n  oAuthRedirectURI: http://drone-127.0.0.1.sslip.io:30980\n  # add oAuth App ClientID and ClientSecret to Kubernetes Secret\n  addKubernetesSecret: true\n  # The Namespace where to create the secret, the secret will \n  # use the format demo-oauth-<username>-secret\n  secretNamespace: drone\n  repos:\n    - https://github.com/kameshsampath/jar-stack\n"
 kind: ConfigMap
 metadata:
   labels:
-    app.kubernetes.io/version: "0.1.0-alpha"
+    app.kubernetes.io/version: "0.1.0"
   name: workshop-config
   namespace: drone
 ---
@@ -60,7 +60,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   labels:
-    app.kubernetes.io/version: "0.1.0-alpha"
+    app.kubernetes.io/version: "0.1.0"
   name: workshop-setup
   namespace: drone
 spec:
@@ -68,14 +68,14 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/version: "0.1.0-alpha"
+        app.kubernetes.io/version: "0.1.0"
     spec:
       containers:
         - args:
             - setup-workshop
             - --workshop-file=/config/workshop.yaml
             - --verbose=debug
-          image: docker.io/kameshsampath/drone-tutorial-gitea-helper:v0.1.0-alpha@sha256:04ccc2d5bb82057dd1ab0e1075732f6efda098436564e9f68d753f158fcb0795
+          image: docker.io/kameshsampath/drone-tutorial-gitea-helper:v0.1.0@sha256:65d3547bb9ad2c825d0fc83ae52586b0abcf96468aa19993dc202f76b0abcef8
           name: gitea-configurer
           volumeMounts:
             - mountPath: /config
